Fixing layout glitch in thread display
Fixed "Please sign in to vote" overlap

--- a/app/assets/stylesheets/shared_elements.scss
+++ b/app/assets/stylesheets/shared_elements.scss
@@ -624,7 +624,7 @@ table.listing {
   .access-denied {
     position: relative;
     text-align: center;
-    top: 90px;
+    top: 40px;
     font-size: 12px;
     color: $lightgrey;
     a { color: $lightgrey; }
